--- a/text-input-highlight.css
+++ b/text-input-highlight.css
@@ -1,13 +1,10 @@
 .text-input-highlight-container {
-  position: relative;
-
-  .text-input-element {
+  position: relative; }
+  .text-input-highlight-container .text-input-element {
     background: none;
     position: relative;
-    z-index: 2;
-  }
-
-  .text-highlight-element {
+    z-index: 2; }
+  .text-input-highlight-container .text-highlight-element {
     overflow: hidden !important;
     white-space: pre-wrap;
     position: absolute;
@@ -17,13 +14,9 @@
     right: 0;
     background: white;
     color: rgba(0, 0, 0, 0);
-    z-index: 1;
-  }
-
-  .text-highlight-tag {
+    z-index: 1; }
+  .text-input-highlight-container .text-highlight-tag {
     border-radius: 8px;
     padding: 1px 3px;
     margin: -1px -3px;
-    overflow-wrap: break-word;
-  }
-}
+    overflow-wrap: break-word; }
